@@ -678,14 +678,9 @@ def create_featreg_preproc(name='featpreproc', highpass=True, whichvol='middle')
                                                     suffix='_mean'),
                            iterfield=['in_file'],
                           name='meanfunc3')
-    if highpass:
-        featpreproc.connect(highpass, ('out_file', pickfirst), meanfunc3, 'in_file')
-    else:
-        featpreproc.connect(meanscale, ('out_file', pickfirst), meanfunc3, 'in_file')
 
+    featpreproc.connect(meanscale, ('out_file', pickfirst), meanfunc3, 'in_file')
     featpreproc.connect(meanfunc3, 'out_file', outputnode, 'mean')
-
-
     return featpreproc
 
 
