@@ -26,6 +26,8 @@ Next Release
 * FIX: FNIRT registration pathway and associated OpenFMRI example script
 * FIX: spm12b compatibility for Model estimate
 * FIX: Batch scheduler controls the number of maximum jobs properly
+* FIX: Update for FSL 5.0.7 which deprecated Contrast Manager
+* ENH: Added ANTS based openfmri workflow
 
 Release 0.9.2 (January 31, 2014)
 ============
